fixing people page layout, centering photos and text
was a bit wonky before. Made role text slightly smaller to prevent it spilling over

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -221,19 +221,23 @@ pre {
 
 
 .profile_box {
-    width: 200px;
-    height: 300px;
+    width: 180px;
+    height: 280px;
+    text-align: center;
     .name {
         font-size: 20px;
         font-weight: bold;
     }
     .role {
-        /* text-align: center; */
+        text-align: center;
+        font-size: smaller;
     }
     .profile_picture {
+        display: block;
         max-width: 150px;
         height: 150px;
         margin: auto;
+        border: 10px;
     }
 }
 
